apps/mautrix/meta/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meta-redirect
spec:
  hostnames:
      - meta.i.shikanime.studio
  parentRefs:
    - name: meta
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
