apps/mautrix/meta/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meta
spec:
  hostnames:
    - meta.i.shikanime.studio
  parentRefs:
    - name: meta
      sectionName: https
  rules:
    - backendRefs:
        - name: mautrix-meta
          port: http
