apps/mautrix/meta/overlays/nishir-tailnet/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meta
spec:
  hostnames:
    - meta.i.shikanime.studio
    - meta.taila659a.ts.net
  parentRefs:
    - name: meta
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meta-redirect
spec:
  hostnames:
    - meta.i.shikanime.studio
    - meta.taila659a.ts.net
  parentRefs:
    - name: meta
      sectionName: http
